...
                      ),

                      const SizedBox(height: 24),

                      // App name
                      const Text(
                        'Join SoloAdventurer',
                        textAlign: TextAlign.center,
                        style: TextStyle(
                          fontSize: 24,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
...
